minor font & spacing fixes

--- a/src/theme/blocks/_listing.scss
+++ b/src/theme/blocks/_listing.scss
@@ -62,6 +62,10 @@
         margin-bottom: 40px !important;
         color: $black;
         @include text-heading-h2();
+        @container (max-width: #{$largest-mobile-screen}) {
+          @include text-heading-h3();
+          margin-bottom: 20px;
+        }
       }
     }
   }
