--- a/src/theme/blocks/_toc.scss
+++ b/src/theme/blocks/_toc.scss
@@ -4,6 +4,10 @@
       a {
         text-decoration: underline;
       }
+
+      &::before {
+        color: $blue-for-grey-contrast !important;
+      }
     }
   }
 }
